feat: add web view

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
   <template id="template-web-view">
     <main class="webView__container">
-      <web-bar></web-bar>
-      <web-content></web-content>
+      <web-bar class="webView__bar"></web-bar>
+      <web-content class="webView__content"></web-content>
     </main>
   </template>
 
