--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 
 <body class="page">
   <svg class="page__icons" xmlns="http://www.w3.org/2000/svg">
-    <symbol id="icon-car" viewBox="0 0 512 512">
-      <path d="M494.26 276.22c-3.6-40.41-9.53-48.28-11.77-51.24-5.15-6.84-13.39-11.31-22.11-16a3.6 3.6 0 01-.91-5.68 15.93 15.93 0 004.53-12.53A16.27 16.27 0 00447.65 176h-15.6a17 17 0 00-2 .13 8.5 8.5 0 00-1.41-.47c-9.24-19.53-21.89-46.27-48.11-59.32C341.64 97 270 96 256 96s-85.64 1-124.48 20.31c-26.22 13.05-38.87 39.79-48.11 59.32l-.08.16a6.52 6.52 0 00-1.35.34 17 17 0 00-2-.13H64.35A16.27 16.27 0 0048 190.77a15.93 15.93 0 004.59 12.47 3.6 3.6 0 01-.91 5.68c-8.72 4.72-17 9.19-22.11 16-2.24 3-8.16 10.83-11.77 51.24-2 22.74-2.3 46.28-.73 61.44 3.29 31.5 9.46 50.54 9.72 51.33a16 16 0 0013.2 10.87v.2a16 16 0 0016 16h56a16 16 0 0016-16c8.61 0 14.6-1.54 20.95-3.18a158.83 158.83 0 0128-4.91C207.45 389 237.79 388 256 388c17.84 0 49.52 1 80.08 3.91a159.16 159.16 0 0128.11 4.93c6.08 1.56 11.85 3 19.84 3.15a16 16 0 0016 16h56a16 16 0 0016-16v-.12A16 16 0 00485.27 389c.26-.79 6.43-19.83 9.72-51.33 1.57-15.17 1.29-38.67-.73-61.45zm-381.93-86.91c8-17 17.15-36.24 33.44-44.35 23.54-11.72 72.33-17 110.23-17s86.69 5.24 110.23 17c16.29 8.11 25.4 27.36 33.44 44.35l1 2.17a8 8 0 01-7.44 11.42C360 202 290 199.12 256 199.12s-104 2.95-137.28 3.85a8 8 0 01-7.44-11.42c.35-.74.72-1.49 1.05-2.24zm11.93 79.63A427.17 427.17 0 0172.42 272c-10.6 0-21.53-3-23.56-12.44-1.39-6.35-1.24-9.92-.49-13.51C49 243 50 240.78 55 240c13-2 20.27.51 41.55 6.78 14.11 4.15 24.29 9.68 30.09 14.06 2.91 2.16 1.36 7.8-2.38 8.1zm221.38 82c-13.16 1.5-39.48.95-89.34.95s-76.17.55-89.33-.95c-13.58-1.51-30.89-14.35-19.07-25.79 7.87-7.54 26.23-13.18 50.68-16.35s34.8-4.8 57.62-4.8 32.12 1 57.62 4.81 44.77 9.52 50.68 16.35c10.78 12.24-5.29 24.19-18.86 25.84zm117.5-91.39c-2 9.48-13 12.44-23.56 12.44a455.91 455.91 0 01-52.84-3.06c-3.06-.29-4.48-5.66-1.38-8.1 5.71-4.49 16-9.91 30.09-14.06 21.28-6.27 33.55-8.78 44.09-6.69 2.57.51 3.93 3.27 4.09 5a40.64 40.64 0 01-.49 14.48z"/>
+    <symbol id="icon-sun" viewBox="0 0 512 512">
+      <path d="M256 118a22 22 0 01-22-22V48a22 22 0 0144 0v48a22 22 0 01-22 22zM256 486a22 22 0 01-22-22v-48a22 22 0 0144 0v48a22 22 0 01-22 22zM369.14 164.86a22 22 0 01-15.56-37.55l33.94-33.94a22 22 0 0131.11 31.11l-33.94 33.94a21.93 21.93 0 01-15.55 6.44zM108.92 425.08a22 22 0 01-15.55-37.56l33.94-33.94a22 22 0 1131.11 31.11l-33.94 33.94a21.94 21.94 0 01-15.56 6.45zM464 278h-48a22 22 0 010-44h48a22 22 0 010 44zM96 278H48a22 22 0 010-44h48a22 22 0 010 44zM403.08 425.08a21.94 21.94 0 01-15.56-6.45l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.55 37.56zM142.86 164.86a21.89 21.89 0 01-15.55-6.44l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.56 37.55zM256 358a102 102 0 11102-102 102.12 102.12 0 01-102 102z"/>
+    </symbol>
+    <symbol id="icon-moon" viewBox="0 0 512 512">
+      <path d="M264 480A232 232 0 0132 248c0-94 54-178.28 137.61-214.67a16 16 0 0121.06 21.06C181.07 76.43 176 104.66 176 136c0 110.28 89.72 200 200 200 31.34 0 59.57-5.07 81.61-14.67a16 16 0 0121.06 21.06C442.28 426 358 480 264 480z"/>
+    </symbol>
+    <symbol id="icon-power" viewBox="0 0 512 512">
+      <path d="M256 464c-114.69 0-208-93.47-208-208.35 0-62.45 27.25-121 74.76-160.55a22 22 0 1128.17 33.8C113.48 160.1 92 206.3 92 255.65 92 346.27 165.57 420 256 420s164-73.73 164-164.35A164 164 0 00360.17 129a22 22 0 1128-33.92A207.88 207.88 0 01464 255.65C464 370.53 370.69 464 256 464z"/>
+      <path d="M256 272a22 22 0 01-22-22V70a22 22 0 0144 0v180a22 22 0 01-22 22z"/>
     </symbol>
   </svg>
 
@@ -34,6 +41,9 @@
       <div class="webSidebar__body">
         <h3 class="webSidebar__subtitle">Menu</h3>
         <web-navigation data-js="web-navigation"></web-navigation>
+        <div class="webSidebar__footer">
+          <web-theme-button></web-theme-button>
+        </div>
       </div>
     </aside>
   </template>
@@ -59,16 +69,43 @@
 
   <template id="template-web-bar">
     <header class="webBar__container">
-      <h2 class="webBar__title" data-js="title"></h2>
+      <div class="webBar__section webBar__section--left">
+        <h2 class="webBar__title" data-js="title"></h2>
+      </div>
+      <div class="webBar__section webBar__section--right">
+        <button class="webBar__button">
+          <svg class="webBar__icon" fill="currentColor">
+            <use href="#icon-power" />
+          </svg>
+        </button>
+      </div>
     </header>
-  </template>
-
-  <template id="template-web-content">
-
   </template>
 
   <template id="template-web-plate">
     <div style="color: white;">PLATE VIEW</div>
+  </template>
+
+  <template id="template-web-theme-button">
+    <div class="webThemeButton__container">
+      <svg class="webThemeButton__icon webThemeButton__icon--sun" fill="currentColor">
+        <use href="#icon-sun" />
+      </svg>
+      <label class="webThemeButton__label" aria-label="toggle theme">
+        <input class="webThemeButton__input" data-js="input" type="checkbox">
+      </label>
+      <svg class="webThemeButton__icon webThemeButton__icon--moon" fill="currentColor">
+        <use href="#icon-moon" />
+      </svg>
+    </div>
+  </template>
+
+  <template id="template-web-power-button">
+    <button class="webPowerButton__container">
+      <svg class="webPowerButton__icon" fill="currentColor">
+        <use href="#icon-power" />
+      </svg>
+    </button>
   </template>
 
   <script type="module" src="/src/main.js"></script>
