feat: handle view update

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
   <template id="template-web-navigation">
     <nav class="webNavigation__container">
-      <web-navigation-item data-view="plate-check" data-label="Plaque d'immatriculation"></web-navigation-item>
-      <web-navigation-item data-view="investigation" data-label="Dossier"></web-navigation-item>
-      <web-navigation-item data-view="dispatch" data-label="Dispatch"></web-navigation-item>
+      <web-navigation-item data-view="plate-view" data-label="Plaque d'immatriculation"></web-navigation-item>
+      <web-navigation-item data-view="investigation-view" data-label="Dossier"></web-navigation-item>
+      <web-navigation-item data-view="dispatch-view" data-label="Dispatch"></web-navigation-item>
     </nav>
   </template>
 
@@ -75,10 +75,6 @@
     <header class="webBar__container">
       <h2 class="webBar__title" data-js="title"></h2>
     </header>
-  </template>
-
-  <template id="template-web-plate">
-    <div>PLATE VIEW</div>
   </template>
 
   <template id="template-web-theme-button">
@@ -102,6 +98,18 @@
       </svg>
       <span class="webPowerButton__label">Quitter l'application</span>
     </button>
+  </template>
+
+  <template id="template-web-plate-view">
+    <div>PLATE VIEW</div>
+  </template>
+
+  <template id="template-web-investigation-view">
+    <div>INVESTIGATION VIEW</div>
+  </template>
+
+  <template id="template-web-dispatch-view">
+    <div>DISPATCH VIEW</div>
   </template>
 
   <script type="module" src="/src/main.js"></script>
