feat: handle navigation item text overflow

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <template id="template-web-navigation">
     <nav class="webNavigation__container">
       <web-navigation-item data-view="plate-view" data-label="Plaque d'immatriculation"></web-navigation-item>
-      <web-navigation-item data-view="investigation-view" data-label="Dossier"></web-navigation-item>
-      <web-navigation-item data-view="dispatch-view" data-label="Dispatch"></web-navigation-item>
+      <web-navigation-item data-view="investigation-view" data-label="Dossiers et enquêtes"></web-navigation-item>
+      <web-navigation-item data-view="dispatch-view" data-label="Dispatch des unités"></web-navigation-item>
     </nav>
   </template>
 
