--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <main class="webDispatch__container">
       <web-bar class="webDispatch__header" data-label="Dispatch des unités" data-js="web-bar"></web-bar>
       <div class="webDispatch__body">
+        <web-dispatch-column data-label="Hors service"></web-dispatch-column>
         <web-dispatch-column data-label="En attente de dispatch"></web-dispatch-column>
         <web-dispatch-column data-label="Lincoln"></web-dispatch-column>
         <web-dispatch-column data-label="Adam"></web-dispatch-column>
@@ -134,8 +135,37 @@
   <template id="template-web-dispatch-column">
     <section class="webDispatchColumn__container">
       <h3 class="webDispatchColumn__title" data-js="title"></h3>
-      <ul class="webDispatchColumn__list" data-js="list"></ul>
+      <ul class="webDispatchColumn__list" data-js="list">
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-group data-name="Adam 01"></web-dispatch-group>
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+      </ul>
     </section>
+  </template>
+
+  <!-- template | web dispatch group -->
+  <template id="template-web-dispatch-group">
+    <div class="webDispatchGroup__container">
+      <p class="webDispatchGroup__name" data-js="name"></p>
+      <div class="webDispatchGroup__placeholder">
+        <p class="webDispatchGroup__placeholderTip">Déposer une ou plusieurs cartes ici</p>
+      </div>
+    </div>
+  </template>
+
+  <!-- template | web dispatch unit -->
+  <template id="template-web-dispatch-unit">
+    <div class="webDispatchUnit__container">
+      <p class="webDispatchUnit__number" data-js="number"></p>
+      <div class="webDispatchUnit__text">
+        <p class="webDispatchUnit__name" data-js="name"></p>
+        <p class="webDispatchUnit__role" data-js="role"></p>
+      </div>
+    </div>
   </template>
 
   <!-- module -->
