feat: add font size for the bar title

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
       <ul class="webDispatchColumn__list" data-js="list">
         <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
         <web-dispatch-group data-name="Adam 01"></web-dispatch-group>
-        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
-        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
-        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
-        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
-        <web-dispatch-unit data-number="01" data-name="Jenny Baker" data-role="Capitaine"></web-dispatch-unit>
+        <web-dispatch-unit data-number="45" data-name="Zoe Duck" data-role="Inspecteur"></web-dispatch-unit>
+        <web-dispatch-unit data-number="88" data-name="Kate Finley" data-role="Lieutenant"></web-dispatch-unit>
+        <web-dispatch-unit data-number="65" data-name="Lena Silvo" data-role="Inspecteur"></web-dispatch-unit>
+        <web-dispatch-unit data-number="14" data-name="Owen Chapman" data-role="Inspecteur"></web-dispatch-unit>
+        <web-dispatch-unit data-number="32" data-name="Roxanne Val" data-role="Lieutenant"></web-dispatch-unit>
       </ul>
     </section>
   </template>
