feat: add meta tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <title>Failypannel</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Faily pannel - Unofficial component</title>
+  <meta name="title" content="FailyV pannel - Unofficial app">
+  <meta name="description" content="FailyV Unofficial pannel app made with web components">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://john-mirage-failyv-pannel.vercel.app/">
+  <meta property="og:title" content="FailyV pannel - Unofficial app">
+  <meta property="og:description" content="FailyV Unofficial pannel app made with web components">
+  <meta property="og:image" content="https://john-mirage-failyv-pannel.vercel.app/preview.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://john-mirage-failyv-pannel.vercel.app/">
+  <meta property="twitter:title" content="FailyV pannel - Unofficial app">
+  <meta property="twitter:description" content="FailyV Unofficial pannel app made with web components">
+  <meta property="twitter:image" content="https://john-mirage-failyv-pannel.vercel.app/preview.jpg">
 </head>
 
 <body class="page">
