feat: handle dispatch grid overflow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Primary Meta Tags -->
-  <title>Faily pannel - Unofficial component</title>
+  <title>Faily pannel - Unofficial app</title>
   <meta name="title" content="FailyV pannel - Unofficial app">
   <meta name="description" content="FailyV Unofficial pannel app made with web components">
 
