feat: rework dispatch styles

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <template id="template-web-dispatch-group">
     <div class="webDispatchGroup__container">
       <p class="webDispatchGroup__name" data-js="name"></p>
-      <div class="webDispatchGroup__placeholder">
+      <div class="webDispatchGroup__placeholder" data-js="placeholder">
         <p class="webDispatchGroup__placeholderTip">Déposer une ou plusieurs cartes ici</p>
       </div>
     </div>
