feat: handle dispatch category count

--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
   <!-- template | web dispatch category -->
   <template id="template-web-dispatch-category">
     <section class="webDispatchCategory__container">
-      <h3 class="webDispatchCategory__name" data-js="name"></h3>
+      <h3 class="webDispatchCategory__name">
+        <span data-js="name"></span>
+        <span data-js="count"></span>
+      </h3>
       <ul class="webDispatchCategory__list" data-js="list"></ul>
     </section>
   </template>
