feat: add drag and drop feature

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <template id="template-web-dispatch">
     <main class="webDispatch__container">
       <web-bar class="webDispatch__header" data-label="Dispatch des unités" data-js="web-bar"></web-bar>
-      <div class="webDispatch__body" data-js="body"></div>
+      <div class="webDispatch__grid" data-js="grid"></div>
     </main>
   </template>
 
@@ -159,9 +159,7 @@
   <template id="template-web-dispatch-group">
     <div class="webDispatchGroup__container">
       <p class="webDispatchGroup__name" data-js="name"></p>
-      <div class="webDispatchGroup__placeholder" data-js="placeholder">
-        <p class="webDispatchGroup__placeholderTip">Déposer une ou plusieurs cartes ici</p>
-      </div>
+      <ul class="webDispatchGroup__placeholder" data-js="placeholder"></ul>
     </div>
   </template>
 
@@ -173,6 +171,13 @@
         <p class="webDispatchUnit__name" data-js="name"></p>
         <p class="webDispatchUnit__role" data-js="role"></p>
       </div>
+    </div>
+  </template>
+
+  <!-- template | web dispatch drop zone -->
+  <template id="template-web-dispatch-drop-zone">
+    <div class="webDispatchDropZone__container">
+      <p class="webDispatchDropZone__message" data-js="message"></p>
     </div>
   </template>
 
