feat: handle dispatch group sizes

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <template id="template-web-dispatch-group">
     <div class="webDispatchGroup__container">
       <p class="webDispatchGroup__name" data-js="name"></p>
-      <ul class="webDispatchGroup__placeholder" data-js="placeholder"></ul>
+      <ul class="webDispatchGroup__list" data-js="list"></ul>
     </div>
   </template>
 
@@ -171,13 +171,6 @@
         <p class="webDispatchUnit__name" data-js="name"></p>
         <p class="webDispatchUnit__role" data-js="role"></p>
       </div>
-    </div>
-  </template>
-
-  <!-- template | web dispatch drop zone -->
-  <template id="template-web-dispatch-drop-zone">
-    <div class="webDispatchDropZone__container">
-      <p class="webDispatchDropZone__message" data-js="message"></p>
     </div>
   </template>
 
