--- a/index.html
+++ b/index.html
@@ -32,19 +32,14 @@
 <body class="page">
   <!-- icons -->
   <svg class="page__icons" xmlns="http://www.w3.org/2000/svg">
-    <symbol id="icon-sun" viewBox="0 0 512 512">
-      <path d="M256 118a22 22 0 01-22-22V48a22 22 0 0144 0v48a22 22 0 01-22 22zM256 486a22 22 0 01-22-22v-48a22 22 0 0144 0v48a22 22 0 01-22 22zM369.14 164.86a22 22 0 01-15.56-37.55l33.94-33.94a22 22 0 0131.11 31.11l-33.94 33.94a21.93 21.93 0 01-15.55 6.44zM108.92 425.08a22 22 0 01-15.55-37.56l33.94-33.94a22 22 0 1131.11 31.11l-33.94 33.94a21.94 21.94 0 01-15.56 6.45zM464 278h-48a22 22 0 010-44h48a22 22 0 010 44zM96 278H48a22 22 0 010-44h48a22 22 0 010 44zM403.08 425.08a21.94 21.94 0 01-15.56-6.45l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.55 37.56zM142.86 164.86a21.89 21.89 0 01-15.55-6.44l-33.94-33.94a22 22 0 0131.11-31.11l33.94 33.94a22 22 0 01-15.56 37.55zM256 358a102 102 0 11102-102 102.12 102.12 0 01-102 102z"/>
+    <symbol id="icon-resize" viewBox="0 0 512 512">
+      <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M432 320v112H320M421.8 421.77L304 304M80 192V80h112M90.2 90.23L208 208M320 80h112v112M421.77 90.2L304 208M192 432H80V320M90.23 421.8L208 304"/>
     </symbol>
-    <symbol id="icon-moon" viewBox="0 0 512 512">
-      <path d="M264 480A232 232 0 0132 248c0-94 54-178.28 137.61-214.67a16 16 0 0121.06 21.06C181.07 76.43 176 104.66 176 136c0 110.28 89.72 200 200 200 31.34 0 59.57-5.07 81.61-14.67a16 16 0 0121.06 21.06C442.28 426 358 480 264 480z"/>
+    <symbol id="icon-close" viewBox="0 0 512 512">
+      <path fill="currentColor" d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"/>
     </symbol>
-    <symbol id="icon-power" viewBox="0 0 512 512">
-      <path d="M256 464c-114.69 0-208-93.47-208-208.35 0-62.45 27.25-121 74.76-160.55a22 22 0 1128.17 33.8C113.48 160.1 92 206.3 92 255.65 92 346.27 165.57 420 256 420s164-73.73 164-164.35A164 164 0 00360.17 129a22 22 0 1128-33.92A207.88 207.88 0 01464 255.65C464 370.53 370.69 464 256 464z"/>
-      <path d="M256 272a22 22 0 01-22-22V70a22 22 0 0144 0v180a22 22 0 01-22 22z"/>
-    </symbol>
-    <symbol id="icon-add" viewBox="0 0 24 24">
-      <path d="M0 0h24v24H0V0z" fill="none"/>
-      <path d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"/>
+    <symbol id="icon-add" viewBox="0 0 512 512">
+      <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 112v288M400 256H112"/>
     </symbol>
   </svg>
 
@@ -53,39 +48,48 @@
 
   <!-- template | web app -->
   <template id="template-web-app">
-    <web-sidebar class="webApp__sidebar" data-js="web-sidebar"></web-sidebar>
-    <web-view class="webApp__view" data-js="web-view"></web-view>
-  </template>
-
-  <!-- template | web sidebar -->
-  <template id="template-web-sidebar">
-    <aside class="webSidebar__container">
-      <header class="webSidebar__header">
-        <img class="webSidebar__logo" src="/src/images/lspd.png" alt="LSPD logo" data-js="image" draggable="false">
-        <h2 class="webSidebar__title" data-js="title"></h2>
-      </header>
-      <div class="webSidebar__body">
-        <section class="webSidebar__section">
-          <h3 class="webSidebar__sectionTitle">Menu</h3>
-          <web-navigation data-js="web-navigation"></web-navigation>
-        </section>
-        <section class="webSidebar__section">
-          <h3 class="webSidebar__sectionTitle">Paramètres</h3>
-          <web-theme-switch class="webSidebar__switch" data-label="Mode nuit"></web-theme-switch>
-          <web-screen-switch class="webSidebar__switch" data-label="Mode plein écran"></web-screen-switch>
-        </section>
-      </div>
-    </aside>
+    <div class="webApp__container">
+      <web-bar class="webApp__bar"></web-bar>
+      <main class="webApp__body">
+        <web-sidebar class="webApp__sidebar"></web-sidebar>
+        <web-view class="webApp__view" data-js="web-view"></web-view>
+      </main>
+    </div>
   </template>
 
   <!-- template | web bar -->
   <template id="template-web-bar">
     <header class="webBar__container">
       <div class="webBar__section webBar__section--left">
-        <h2 class="webBar__title" data-js="title"></h2>
+        <h2 class="webBar__name">Los Santos Police Department</h2>
       </div>
-      <div class="webBar__section webBar__section--right" data-js="actions"></div>
+      <div class="webBar__section webBar__section--right">
+        <button class="webBar__button" type="button" aria-label="Redimensionner la fenêtre" data-js="resize-button">
+          <svg class="webBar__buttonIcon">
+            <use href="#icon-resize" />
+          </svg>
+        </button>
+        <button class="webBar__button" type="button" aria-label="Fermer l'application" data-js="close-button">
+          <svg class="webBar__buttonIcon">
+            <use href="#icon-close" />
+          </svg>
+        </button>
+      </div>
     </header>
+  </template>
+
+  <!-- template | web sidebar -->
+  <template id="template-web-sidebar">
+    <aside class="webSidebar__container">
+      <section class="webSidebar__section">
+        <h3 class="webSidebar__sectionTitle">Menu</h3>
+        <web-navigation data-js="web-navigation"></web-navigation>
+      </section>
+      <section class="webSidebar__section">
+        <h3 class="webSidebar__sectionTitle">Paramètres</h3>
+        <web-theme-switch class="webSidebar__switch" data-label="Mode nuit"></web-theme-switch>
+      </section>
+    </aside>
   </template>
 
   <!-- template | web navigation -->
@@ -99,7 +103,7 @@
 
   <!-- template | web navigation item -->
   <template id="template-web-navigation-item">
-    <button class="webNavigationItem__button" data-js="button"></button>
+    <button class="webNavigationItem__button" type="button" data-js="button"></button>
   </template>
 
   <!-- template | web switch -->
@@ -113,7 +117,7 @@
   <!-- template | web button -->
   <template id="template-web-button">
     <button class="webButton__container" data-js="button">
-      <svg class="webButton__icon" fill="currentColor">
+      <svg class="webButton__icon">
         <use data-js="icon" />
       </svg>
       <span class="webButton__label" data-js="label"></span>
@@ -122,26 +126,36 @@
 
   <!-- template | web car plate -->
   <template id="template-web-car-plate">
-    <main class="webCarPlate__container">
-      <web-bar class="webCarPlate__header" data-label="Plaque d'immatriculation" data-js="web-bar"></web-bar>
+    <article class="webCarPlate__container">
       <div class="webCarPlate__body"></div>
-    </main>
+    </article>
   </template>
 
   <!-- template | web investigation -->
   <template id="template-web-investigation">
-    <main class="webInvestigation__container">
-      <web-bar class="webInvestigation__header" data-label="Dossiers et enquêtes" data-js="web-bar"></web-bar>
+    <article class="webInvestigation__container">
       <div class="webInvestigation__body"></div>
-    </main>
+    </article>
   </template>
 
   <!-- template | web dispatch -->
   <template id="template-web-dispatch">
-    <main class="webDispatch__container">
-      <web-bar class="webDispatch__header" data-label="Dispatch des unités" data-js="web-bar"></web-bar>
-      <div class="webDispatch__grid" data-js="grid"></div>
-    </main>
+    <article class="webDispatch__container">
+      <web-dispatch-toolbar></web-dispatch-toolbar>
+      <ul class="webDispatch__list" data-js="list"></ul>
+    </article>
+  </template>
+
+  <!-- template | web dispatch toolbar -->
+  <template id="template-web-dispatch-toolbar">
+    <header class="webDispatchToolbar__container">
+      <div class="webDispatchToolbar__section webDispatchToolbar__section--left">
+        <h2 class="webDispatchToolbal__name">Dispatch des unités</h2>
+      </div>
+      <div class="webDispatchToolbar__section webDispatchToolbar__section--right">
+        <web-button class="webDispatchToolbar__button" data-icon="add" data-label="ajouter une catégorie" data-js="add-category-button"></web-button>
+      </div>
+    </header>
   </template>
 
   <!-- template | web dispatch category -->
@@ -157,21 +171,26 @@
 
   <!-- template | web dispatch group -->
   <template id="template-web-dispatch-group">
-    <div class="webDispatchGroup__container">
-      <p class="webDispatchGroup__name" data-js="name"></p>
+    <article class="webDispatchGroup__container">
+      <header class="webDispatchGroup__header">
+        <h4 class="webDispatchGroup__name">
+          <span class="webDispatchGroup__category" data-js="category"></span>
+          <span class="webDispatchGroup__number" data-js="number"></span>
+        </h4>
+      </header>
       <ul class="webDispatchGroup__list" data-js="list"></ul>
-    </div>
+    </article>
   </template>
 
   <!-- template | web dispatch unit -->
   <template id="template-web-dispatch-unit">
-    <div class="webDispatchUnit__container">
-      <p class="webDispatchUnit__number" data-js="number"></p>
+    <article class="webDispatch__container">
+      <h4 class="webDispatchUnit__number" data-js="number"></h4>
       <div class="webDispatchUnit__text">
-        <p class="webDispatchUnit__name" data-js="name"></p>
+        <h5 class="webDispatchUnit__name" data-js="name"></h5>
         <p class="webDispatchUnit__role" data-js="role"></p>
       </div>
-    </div>
+    </article>
   </template>
 
   <!-- module -->
