--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 <body class="page">
   <!-- icons -->
   <svg class="page__icons" xmlns="http://www.w3.org/2000/svg">
-    <symbol id="icon-resize" viewBox="0 0 512 512">
-      <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M432 320v112H320M421.8 421.77L304 304M80 192V80h112M90.2 90.23L208 208M320 80h112v112M421.77 90.2L304 208M192 432H80V320M90.23 421.8L208 304"/>
+    <symbol id="icon-resize" viewBox="0 0 24 24">
+      <path fill="none" d="M0 0h24v24H0V0z"/>
+      <path fill="currentColor" d="M6 14c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h3c.55 0 1-.45 1-1s-.45-1-1-1H7v-2c0-.55-.45-1-1-1zm0-4c.55 0 1-.45 1-1V7h2c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1zm11 7h-2c-.55 0-1 .45-1 1s.45 1 1 1h3c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1s-1 .45-1 1v2zM14 6c0 .55.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V6c0-.55-.45-1-1-1h-3c-.55 0-1 .45-1 1z"/>
     </symbol>
-    <symbol id="icon-close" viewBox="0 0 512 512">
-      <path fill="currentColor" d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"/>
+    <symbol id="icon-close" viewBox="0 0 24 24">
+      <path fill="none" d="M0 0h24v24H0V0z"/>
+      <path fill="currentColor" d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/>
     </symbol>
     <symbol id="icon-add" viewBox="0 0 512 512">
       <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 112v288M400 256H112"/>
@@ -52,7 +54,7 @@
       <web-bar class="webApp__bar"></web-bar>
       <main class="webApp__body">
         <web-sidebar class="webApp__sidebar"></web-sidebar>
-        <web-view class="webApp__view" data-js="web-view"></web-view>
+        <web-view class="webApp__view" data-view="car-plate-view" data-js="web-view"></web-view>
       </main>
     </div>
   </template>
@@ -64,16 +66,8 @@
         <h2 class="webBar__name">Los Santos Police Department</h2>
       </div>
       <div class="webBar__section webBar__section--right">
-        <button class="webBar__button" type="button" aria-label="Redimensionner la fenêtre" data-js="resize-button">
-          <svg class="webBar__buttonIcon">
-            <use href="#icon-resize" />
-          </svg>
-        </button>
-        <button class="webBar__button" type="button" aria-label="Fermer l'application" data-js="close-button">
-          <svg class="webBar__buttonIcon">
-            <use href="#icon-close" />
-          </svg>
-        </button>
+        <web-button data-icon="resize" data-label="Redimensionner"></web-button>
+        <web-button data-icon="close" data-label="Fermer"></web-button>
       </div>
     </header>
   </template>
@@ -95,7 +89,7 @@
   <!-- template | web navigation -->
   <template id="template-web-navigation">
     <nav class="webNavigation__container">
-      <web-navigation-item data-view="plate-view" data-label="Plaque d'immatriculation"></web-navigation-item>
+      <web-navigation-item data-view="car-plate-view" data-label="Plaque d'immatriculation"></web-navigation-item>
       <web-navigation-item data-view="investigation-view" data-label="Dossiers et enquêtes"></web-navigation-item>
       <web-navigation-item data-view="dispatch-view" data-label="Dispatch des unités"></web-navigation-item>
     </nav>
