feat: simplify sidebar

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <aside class="webSidebar__container">
       <section class="webSidebar__section">
         <h3 class="webSidebar__sectionTitle">Menu</h3>
-        <web-navigation data-js="web-navigation"></web-navigation>
+        <web-navigation></web-navigation>
       </section>
-      <section class="webSidebar__section">
+      <section class="webSidebar__section webSidebar__section--settings">
         <h3 class="webSidebar__sectionTitle">Paramètres</h3>
         <web-theme-switch class="webSidebar__switch" data-label="Mode nuit"></web-theme-switch>
       </section>
