--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <aside class="webSidebar__container">
       <section class="webSidebar__section">
         <h3 class="webSidebar__sectionTitle">Menu</h3>
-        <web-navigation></web-navigation>
+        <web-view-navigation data-view="dispatch"></web-view-navigation>
       </section>
       <section class="webSidebar__section webSidebar__section--settings">
         <h3 class="webSidebar__sectionTitle">Paramètres</h3>
@@ -86,18 +86,18 @@
     </aside>
   </template>
 
-  <!-- template | web navigation -->
-  <template id="template-web-navigation">
-    <nav class="webNavigation__container">
-      <web-navigation-item data-view="car-plate-view" data-label="Plaque d'immatriculation"></web-navigation-item>
-      <web-navigation-item data-view="investigation-view" data-label="Dossiers et enquêtes"></web-navigation-item>
-      <web-navigation-item data-view="dispatch-view" data-label="Dispatch des unités"></web-navigation-item>
+  <!-- template | web view navigation -->
+  <template id="template-web-view-navigation">
+    <nav class="webViewNavigation__container" data-js="navigation">
+      <web-view-navigation-item data-view="car-plate" data-label="Plaque d'immatriculation"></web-view-navigation-item>
+      <web-view-navigation-item data-view="investigation" data-label="Dossiers et enquêtes"></web-view-navigation-item>
+      <web-view-navigation-item data-view="dispatch" data-label="Dispatch des unités"></web-view-navigation-item>
     </nav>
   </template>
 
-  <!-- template | web navigation item -->
-  <template id="template-web-navigation-item">
-    <button class="webNavigationItem__button" type="button" data-js="button"></button>
+  <!-- template | web view navigation item -->
+  <template id="template-web-view-navigation-item">
+    <button class="webViewNavigationItem__button" type="button" data-js="button"></button>
   </template>
 
   <!-- template | web switch -->
