fix: fix view system

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <web-bar class="webApp__bar"></web-bar>
       <main class="webApp__body">
         <web-sidebar class="webApp__sidebar"></web-sidebar>
-        <web-view class="webApp__view" data-view="car-plate-view" data-js="view"></web-view>
+        <web-view class="webApp__view" data-js="view"></web-view>
       </main>
     </div>
   </template>
