ref: replace mode button with mode switch

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <h2 class="webBar__label" data-js="label"></h2>
       </div>
       <div class="webBar__section webBar__section--right">
-        <web-button data-icon="resize" data-label="Redimensionner"></web-button>
         <web-button data-icon="close" data-label="Fermer"></web-button>
       </div>
     </header>
@@ -82,6 +81,7 @@
       <section class="webSidebar__section webSidebar__section--settings">
         <h3 class="webSidebar__sectionTitle">Paramètres</h3>
         <web-theme-switch class="webSidebar__switch" data-label="Mode nuit"></web-theme-switch>
+        <web-mode-switch class="webSidebar__switch" data-label="Mode plein écran"></web-mode-switch>
       </section>
     </aside>
   </template>
