--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       </section>
       <section class="webSidebar__section webSidebar__section--settings">
         <h3 class="webSidebar__sectionTitle">Paramètres</h3>
-        <web-theme-switch class="webSidebar__switch" data-label="Mode nuit"></web-theme-switch>
-        <web-mode-switch class="webSidebar__switch" data-label="Mode plein écran"></web-mode-switch>
+        <web-theme-switch class="webSidebar__switch"></web-theme-switch>
+        <web-mode-switch class="webSidebar__switch"></web-mode-switch>
       </section>
     </aside>
   </template>
