fix: fix dispatch components

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
   <!-- template | web dispatch unit -->
   <template id="template-web-dispatch-unit">
-    <article class="webDispatch__container">
+    <article class="webDispatchUnit__container">
       <h4 class="webDispatchUnit__number" data-js="number"></h4>
       <div class="webDispatchUnit__text">
         <h5 class="webDispatchUnit__name" data-js="name"></h5>
