feat: rework dispatch group

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <article class="webDispatchGroup__container">
       <header class="webDispatchGroup__header">
         <h4 class="webDispatchGroup__name">
-          <span class="webDispatchGroup__category" data-js="category"></span>
-          <span class="webDispatchGroup__number" data-js="number"></span>
+          <span data-js="name"></span>
+          <span data-js="number"></span>
         </h4>
       </header>
       <ul class="webDispatchGroup__list" data-js="list"></ul>
