feat: add delete button on dispatch groups

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
           <span data-js="name"></span>
           <span data-js="number"></span>
         </h4>
+        <button class="webDispatchGroup__button" data-js="delete-button">
+          <svg class="webDispatchGroup__buttonIcon">
+            <use href="#icon-close" />
+          </svg>
+        </button>
       </header>
       <ul class="webDispatchGroup__list" data-js="list"></ul>
     </article>
